Bug 459912 - Del-Key action is buggy in BLOCK mode
Summary: Del-Key action is buggy in BLOCK mode
Status: RESOLVED FIXED
Alias: None
Product: frameworks-ktexteditor
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-10-02 11:25 UTC by Lothar
Modified: 2023-09-30 18:57 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lothar 2022-10-02 11:25:29 UTC
SUMMARY
Pressing Del-Key has no effect when a range over more than one line not encapsulate characters.

STEPS TO REPRODUCE
1. Enable BLOCK mode, usually by Ctrl-Shift-B 
2. Move to some text block with enough content
3. Hold down Shift and press Arrow-Down to span a range over some lines but don't move left/right
4. Press Del-Key

OBSERVED RESULT
Cursor jump to top of range, but nothing is deleted

EXPECTED RESULT
Well, delete char right to the spawned range

SOFTWARE/OS VERSIONS
Framework 5.98 and current master tree

ADDITIONAL INFORMATION
When you encapsulate some char the Del-Key do the job.
No idea if this is intended, but I'm pretty sure in the past it has worked fine. When you try to do this in a similar way by using the new multi-cursor stuff it works as expected. That may the reason why I have this noted slightly late.
Comment 1 Bug Janitor Service 2023-09-30 16:57:17 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/ktexteditor/-/merge_requests/607
Comment 2 Christoph Cullmann 2023-09-30 18:57:28 UTC
Git commit f275643b60ce612e4b7c30ec0b750dac724fbc84 by Christoph Cullmann, on behalf of Jonathan Poelen.
Committed on 30/09/2023 at 20:51.
Pushed by cullmann into branch 'master'.

Fix key delete in block selection when range contains no characters

M  +33   -0    autotests/src/kateview_test.cpp
M  +1    -0    autotests/src/kateview_test.h
M  +11   -0    src/view/kateview.cpp

https://invent.kde.org/frameworks/ktexteditor/-/commit/f275643b60ce612e4b7c30ec0b750dac724fbc84