Fix key delete in block selection when range contains no characters

BUG: 459912